--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 /*! `Custom` Bootstrap 4 theme */
 @import url(https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css);
-@import url(https://fonts.googleapis.com/css?family=Playfair+Display:200,300,400,700|Roboto:400,400i,700,700i);
+// @import url(https://fonts.googleapis.com/css?family=Playfair+Display:200,300,400,700|Roboto:400,400i,700,700i);
 
 @import 'variables';
 //add variables above import
