Replace shopping modal with Typeahead input

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -7,7 +7,7 @@ $warning:#0DE2EA;
 $light:#ececec;
 $dark:#222222;
 $spacer:1rem;
-$border-width:0;
+$border-width: 1px;
 $btn-border-radius:0;
 
 $headings-font-family:'Playfair Display';
