css specificity for login form

--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -3,7 +3,7 @@
 html, body, #root, .login-container {
   height: 100%;
 }
-form {
+.login-form, .register-form {
   width: 100%;
   max-width: 330px;
   padding: 15px;
