--- a/src/variables.scss
+++ b/src/variables.scss
@@ -9,6 +9,7 @@ $dark:#222222;
 $spacer:1rem;
 $border-width: 1px;
 $btn-border-radius:0;
+$list-group-border-color: rgba($dark, .1) !default;
 
 $headings-font-family:'Playfair Display';
 $font-family-base: 'Roboto', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
