cocktail item layout tweaks

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -12,4 +12,7 @@ $btn-border-radius:0;
 $list-group-border-color: rgba($dark, .1) !default;
 
 $headings-font-family:'Playfair Display';
+$font-weight-light:           300;
+$font-weight-normal:          300;
+$font-weight-bold:            500;
 $font-family-base: 'Roboto', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
