--- a/src/components/cocktails/cocktailItem.scss
+++ b/src/components/cocktails/cocktailItem.scss
@@ -1,27 +1,38 @@
+@import '../../variables.scss';
+
 .recipe-badge .badge {
   font-size: 16px;
   padding: 8px 8px 8px 10px;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-  margin-right: -20px;
+  margin-top: 2px;
+  // border-top-right-radius: 0;
+  // border-bottom-right-radius: 0;
+  //margin-right: -20px;
 }
 
-.ingredient--can-make {
+.ingredient--cant-make {
+  position: relative;
   .btn {
     opacity: 0;
+    position: absolute;
+    display: none;
     transition: opacity 0.125s ease-in-out .5s;
+    z-index: 100;
+    top: -5px;
+    transform: scale(.85);
+    transform-origin: left center;
   }
   &:hover .btn {
     opacity: 1;
+    display: inline-block;
     transition: opacity .125s ease-in-out 0s;
   }
 }
 
 .in-shopping-list {
   opacity: 0;
-  color: lightgray;
+  color: #adb5bd;
   transition: opacity .125s ease-in-out 0s;
-  .ingredient--can-make:hover & {
+  .ingredient--cant-make:hover & {
     transition: opacity .125s ease-in-out 0s;
     opacity: 1;
   }
@@ -33,4 +44,28 @@
 
 .ingredient__unit {
   margin: 0 3px;
+}
+
+.recipe-ingredients {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.ingredient__label {
+  font-weight: $font-weight-bold;
+}
+
+.ingredient__amount-wrap {
+  width: 70px;
+  display: inline-block;
+  text-align: right;
+}
+
+.cocktail-name {
+  font-size: 2.25em;
+}
+
+.cocktail-header {
+  border-bottom: 1px solid lightgray;
 }
