shopping list layout tweaks

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,5 +3,7 @@
 
 @import 'variables';
 //add variables above import
-
+.badge {
+  font-family: $font-family-base;
+}
 @import '~bootstrap/scss/bootstrap.scss';
