--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,7 +3,7 @@ $secondary:#CACACA;
 $primary:#015668;
 $success:#06648C;
 $info:#0F81C7;
-$warning:#0DE2EA;
+$warning:rgb(8, 188, 194);
 $light:#ececec;
 $dark:#222222;
 $spacer:1rem;
