smaller font size for ingredients filter legend

--- a/src/components/cocktails/ingredientFilter.scss
+++ b/src/components/cocktails/ingredientFilter.scss
@@ -1,3 +1,9 @@
-.ingredient-filter label {
-  font-size: 14px;
+.ingredient-filter {
+  legend {
+    font-size: 16px;
+    font-weight: bold;
+  }
+  label {
+    font-size: 14px;
+  }
 }
