--- a/src/components/shoppinglist/shoppingList.scss
+++ b/src/components/shoppinglist/shoppingList.scss
@@ -1,7 +1,9 @@
+@import "../../variables.scss";
+
 .shopping-badge {
   font-size: .65em;
   position:relative;
-  top: -4px;
+  top: -2px;
 }
 
 @media (min-width: 900px) {
@@ -9,5 +11,19 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 1em;
+  }
+}
+
+.shopping-bought {
+  color: $primary;
+  &:hover {
+    color: $warning;
+  }
+}
+
+.shopping-remove {
+  color: $primary;
+  &:hover {
+    color: $danger;
   }
 }
