--- a/src/components/shoppinglist/shoppingList.scss
+++ b/src/components/shoppinglist/shoppingList.scss
@@ -27,3 +27,12 @@
     color: $danger;
   }
 }
+
+.shopping-item {
+  transition: all .125s ease-in-out 0.125s;
+  &:hover {
+    box-shadow: 0 0 15px rgba($secondary, 0.45);
+    transform: scale(1.03);
+    transition: all .125s ease-in-out 0s;
+  }
+}
